# p0

./: .env.example  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  compose.yml  pyproject.toml  requirements.txt  run-tailwind.sh
doc/: features.md
src/diag/: __main__.py  diagnose.py  pyproject.toml
src/diag/app/: app.py
src/diag/app/static/: output.css
src/diag/app/static/js/: index.js
src/diag/app/templates/: index.html
src/diag/dao/: logs.py  stats.py  systems.py
src/diag/dao/db/: dbdao.py  metrics.py
src/diag/dao/linux/: logs.py  systems.py
src/diag/data/: cpu.py  cpu_track.py  ip_address.py  logs.py  memory_track.py  metrics.py  network_local.py  network_tcp.py  stats.py  storage.py  systems.py
src/diag/service/: create_logs.py
src/diag/utils/: exceptions.py  simple.py
src/owentools/: __main__.py  azure.py  index.py  local.py
src/owentools/app/: app.py
src/owentools/app/static/: output.css
src/owentools/app/static/js/: index.js
src/owentools/app/styles/: index.css
src/owentools/app/templates/: index.html
src/owentools/dao/db/: dbdao.py  metrics.py
src/owentools/dao/linux/: logs.py  systems.py
src/owentools/data/: args.py
src/owentools/utils/: exceptions.py  simple.py
